# spyderDergiPark

./: .gitignore  LICENCE  README.md  createTopicLinkDict.py  setup.cfg  spyderDergiPark.py  topicLinkDict.pickle
src/spyderDergiPark/: createTopicLinkDict.py  spyderDergiPark.py
src/spyderDergiPark.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
