[metadata]
name = spyderDergiPark
version = 0.0.8
author = Sena Erdogan
author_email = saadetsenaerdogan@gmail.com
description = A Python library that enables downloading articles from DergiPark (https://dergipark.org.tr) related to a topic or a search phrase.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/senaerdogan/spyderDergiPark
project_urls =
    Bug Tracker = https://github.com/senaerdogan/spyderDergiPark/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src